creates an App component that returns JSX

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div class="container"></div>
   </body>
-  <!-- compiled js for entire app, made by webpack and babel -->
+  <!-- compiled js file for entire app, made by webpack and babel -->
   <script src="/bundle.js"></script>
 </html>
